# gl_planets

./: .gitignore  CMakeLists.txt
include/: gl.hpp  texture.hpp
shaders/: sphere.frag  sphere.vert  sphere_frag.glsl  sphere_vert.glsl
src/: main.cpp
